--- a/Lab3/build.xml
+++ b/Lab3/build.xml
@@ -1,4 +1,4 @@
-<project name="Lab3" default="compile" basedir=".">
+<project name="Lab3" default="deploy" basedir=".">
   <property file="build.properties"/>
 
   <!-- init target makes the directory structure. You may not
@@ -6,7 +6,6 @@
   <target name="init">
     <tstamp/>
     <mkdir dir="${classes.dir}"/>
-    <mkdir dir="${javadoc.dir}"/>
   </target>
 
   <!-- Compiles your java files and puts the classes in classes.dir -->
@@ -16,7 +15,6 @@
       destdir="${classes.dir}">
       <!-- Make sure you set your classpath! -->
       <classpath>
-        <fileset dir="${lib.dir}" includes="*.jar"/>
         <fileset dir="${tomcat.home}/lib" includes="servlet-api.jar"/>
         <pathelement path="${classes.dir}" />
       </classpath>
@@ -24,14 +22,12 @@
   </target>
 
   <!-- The deploy target will be highly dependent on your deployed app.
-       For example, if you are building a web-app, you should include
+       you are building a web-app, you should include
        commands to copy files over to your deploy directory according
        to the servlet specification, or create a .war file (via dist)
-       and copy it over. If you are creating a standalone app (like this
-       example does), you can create it in a given directory, or create
-       your dist jar first that can be run using java -jar. -->
+       and copy it over.  -->
   <target name="deploy" depends="dist">
-    <copy file="${dist.jar}" todir="${tomcat.home}/webapps" overwrite="yes"/>
+    <copy file="${dist.war}" todir="${tomcat.home}/webapps" overwrite="yes"/>
   </target>
       
   <target name="build" depends="compile">
@@ -40,53 +36,25 @@
     <copy todir="${build.home}/WEB-INF">
       <fileset dir="." includes="${classes.dir}/**,${lib.dir}/**" excludes="${classes.dir}/driver/**"/>
     </copy>
-    <copy todir="${build.home}/WEB-INF/${classes.dir}">
-      <fileset dir="${properties.dir}"/>
-    </copy>
-    <copy todir="${build.home}/resources">
-      <fileset dir="${resources.dir}"/>
-    </copy>
-  	<copy file="resources/ResultEntries.txt" tofile="${build.home}/WEB-INF/classes/resources/ResultEntries.txt"/>
-  	<copy file="html/Form1.html" tofile="${build.home}/Form1.html"/>
+    <copy file="${src.dir}/Form1.html" tofile="${build.home}/Form1.html"/>
     <copy file="web.xml" tofile="${build.home}/WEB-INF/web.xml"/>
   </target>
     
-  <!-- This example dist target merely jars up the webapp files. -->
-  <target name="dist" depends="build">
-    <jar destfile="${dist.jar}" basedir="${build.home}">
-    </jar>
+  <!--create a WAR file -->
+	<target name="dist" depends="build">
+    <war destfile="${dist.war}" basedir="${build.home}">
+    </war>
   </target>
 
-  <!-- submit creates a single jarfile that you will upload to the
-       Gradebook channel on the class portal. -->
-  <target name="submit" depends="dist,javadoc">
-    <jar destfile="${submit.jar}" basedir="." includes="README.txt,build.properties,build.xml,web.xml,${src.dir}/**,${docs.dir}/**,${javadoc.dir}/**,${properties.dir}/**,${lib.dir}/**,${classes.dir}/**">
-     </jar>
-  </target>
-
-  <!-- Run javadoc on your java source code -->
-  <target name="javadoc" depends="init">
-    <javadoc packagenames="*"
-             sourcepath="src/java"
-             destdir="javadoc"
-             author="true"
-             version="true"/>
-  </target>
-
+  
   <!-- Clean -->
   <!-- NOTE: This needs some work, we really need to undeploy the app in TC -->
   <target name="clean">
-    <delete file="${dist.jar}"/>
+    <delete file="${dist.war}"/>
     <delete dir="${tomcat.home}/webapps/${app.name}"/>
-    <delete file="${tomcat.home}/webapps/${dist.jar}"/>
+    <delete file="${tomcat.home}/webapps/${dist.war}"/>
     <delete dir="${build.home}"/>
 	<delete dir="${classes.dir}"/>
-  </target>
-
-  <!-- Clean all -->
-  <target name="cleanall" depends="clean">
-    <delete dir="${javadoc.dir}"/>
-    <delete file="${submit.jar}"/>
   </target>
 
 </project>
